[gd_scene load_steps=2 format=3 uid="uid://be13dj8aot2a1"]

[ext_resource type="Script" uid="uid://b7wuc3lebbhcu" path="res://scripts/mc.gd" id="1_nnsk1"]

[node name="World" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Level" type="Label" parent="UI"]
offset_left = 16.0
offset_right = 56.0
offset_bottom = 23.0
text = "1"

[node name="DarkEnergy" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 64.0
offset_right = 56.0
offset_bottom = 87.0
text = "2"

[node name="MaxDarkEnergy" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 128.0
offset_right = 56.0
offset_bottom = 151.0
text = "3"

[node name="LevelUp" type="Button" parent="UI"]
offset_left = 384.0
offset_right = 464.0
offset_bottom = 31.0
text = "LEVEL UP"

[node name="Reanimate" type="Button" parent="UI"]
offset_left = 384.0
offset_top = 64.0
offset_right = 464.0
offset_bottom = 95.0
text = "REANIMATE
"

[node name="MainCharacter" type="Node2D" parent="."]
script = ExtResource("1_nnsk1")

[connection signal="pressed" from="UI/LevelUp" to="MainCharacter" method="_on_level_up_pressed"]
[connection signal="pressed" from="UI/Reanimate" to="MainCharacter" method="_on_reanimate_pressed"]
